[package]
name = "hello-grpc-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name="server"
path = "./src/server.rs"

[[bin]]
name="client"
path="./src/client.rs"

[dependencies]
tonic = "0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.8"
protos-hello = { git = "https://github.com/codelite7/protos-hello" }